Closed Bug 797817 Opened 13 years ago Closed 13 years ago

Otoro LED stays lit after disconnecting from mains following full charge

Categories

(Firefox OS Graveyard :: General, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(blocking-basecamp:+, firefox18 fixed, firefox19 fixed)

RESOLVED FIXED
blocking-basecamp +
Tracking Status
firefox18 --- fixed
firefox19 --- fixed

People

(Reporter: benfrancis, Assigned: bechen)

References

Details

Attachments

(1 file)

Device: Otoro STR: * Charge the device until it is fully charged * Unplug from charger Expected: I'm not actually sure what is supposed to happen, but I'm guessing the green LED lights up to tell you that the device is fully charged, then should turn off when you unplug the device from the charger? Actual: LED turns on once fully charged, but when you unplug it stays lit until you next reboot. Side note: I'm actually curious to know where this code lives and how much control we have over the LED. I've seen some interesting looking drivers hanging around in the codebase and wondered if we could use the LED for other things too (like flashing/pulsing for notifications).
I feel like this didn't used to happen. Either way, sounds very bad :)
blocking-basecamp: ? → +
s/didn't used to happen/wasn't the behaviour in the past/ Man, poor grammar today.
Assignee: nobody → bechen
I can still reproduce this.
Comment on attachment 673772 [details] [diff] [review] Update the battery indicator led when receiving battery status change. Looks great!
Attachment #673772 - Flags: review?(jones.chris.g) → review+
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 13 years ago
Flags: in-testsuite-
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: