Bug 797817 - Update the battery indicator led when receiving battery status change. r=cjones